# signalrank-ai

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  sources.curated.json  sources.example.json  sources.premium.example.json
src/ai_hotspot_monitor/: api.py  cli.py  config.py  fetcher.py  models.py  pipeline.py  resume.py  scoring.py
viewer/: app.js  index.html  styles.css
